force-app/main/default/objects/TT_Release__c/TT_Release__c.object-meta.xml
<CustomObject>
    <label>TT Release</label>
    <nameField>
        <displayFormat>Release-{000}</displayFormat>
        <label>TT Release ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>