force-app/main/default/objects/TT_Release__c/fields/Actual_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date__c</fullName>
    <description>The actual release date was deployed</description>
    <inlineHelpText>The actual release date was deployed</inlineHelpText>
    <label>Actual Release Date</label>
    <type>Date</type>
</CustomField>