force-app/main/default/objects/TT_Release__c/fields/All_Signoffs_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Signoffs_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Signoffs_Complete &gt;= Signoffs_Required and Signoffs_Required &gt; 0</description>
    <inlineHelpText>True when Signoffs_Complete &gt;= Signoffs_Required and Signoffs_Required &gt; 0</inlineHelpText>
    <label>All Signoffs Completed</label>
    <type>Checkbox</type>
</CustomField>