force-app/main/default/objects/TT_Release__c/fields/Change_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Change_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the DevOps Center Change Bundle grouping the work items for this release</description>
    <inlineHelpText>Optional link to the DevOps Center Change Bundle grouping the work items for this release</inlineHelpText>
    <label>Change Bundle</label>
    <referenceTo>sf_devops__Change_Bundle__c</referenceTo>
    <relationshipLabel>TT Releases</relationshipLabel>
    <relationshipName>TT_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>