force-app/main/default/objects/TT_Release__c/fields/Planned_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release_Date__c</fullName>
    <description>Planned deployment date</description>
    <inlineHelpText>Planned deployment date</inlineHelpText>
    <label>Planned Release Date</label>
    <type>Date</type>
</CustomField>