force-app/main/default/objects/TT_Release__c/fields/Release_Manager__c.field-meta.xml
<CustomField>
    <fullName>Release_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person coordinating the deployment</description>
    <inlineHelpText>Person coordinating the deployment</inlineHelpText>
    <label>Release Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TT Releases</relationshipLabel>
    <relationshipName>TT_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>