force-app/main/default/objects/TT_Release__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <description>YYYY MM DD &lt;notes&gt;   E.g. 2026 09 21 Sprint A; 2026 08 31 Product Launch</description>
    <inlineHelpText>YYYY MM DD &lt;notes&gt;   E.g. 2026 09 21 Sprint A; 2026 08 31 Product Launch</inlineHelpText>
    <label>Release Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>