force-app/main/default/objects/TT_Release__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <description>Human-readable summary of what is in this release — published to stakeholders on deployment</description>
    <inlineHelpText>Human-readable summary of what is in this release — published to stakeholders on deployment</inlineHelpText>
    <label>Release Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>