force-app/main/default/objects/TT_Release__c/fields/Signoffs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Signoffs_Completed__c</fullName>
    <description>Total number of signoffs with the status of approved</description>
    <inlineHelpText>Total number of signoffs with the status of approved</inlineHelpText>
    <label>Signoffs Completed</label>
    <summaryFilterItems>
        <field>TT_Release_Signoff__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>TT_Release_Signoff__c.TT_Release__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>