force-app/main/default/objects/TT_Release__c/fields/Signoffs_Required__c.field-meta.xml
<CustomField>
    <fullName>Signoffs_Required__c</fullName>
    <description>Total sign-off records approved before the Release can be deployed</description>
    <inlineHelpText>Total sign-off records approved before the Release can be deployed</inlineHelpText>
    <label>Signoffs Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>