force-app/main/default/objects/TT_Release__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current state of the release</description>
    <inlineHelpText>Current state of the release</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Pending Signoff</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Rolled Back</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>