force-app/main/default/objects/TT_Release__c/fields/Total_Change_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Change_Requests__c</fullName>
    <description>Update via flow or code to track number of change requests associated to the release</description>
    <inlineHelpText>Update via flow or code to track number of change requests associated to the release</inlineHelpText>
    <label>Total Change Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>