force-app/main/default/objects/TT_Release__c/fields/Total_Signoffs__c.field-meta.xml
<CustomField>
    <fullName>Total_Signoffs__c</fullName>
    <description>Number of sign-off records created (should match the required sign-off number)</description>
    <inlineHelpText>Number of sign-off records created (should match the required sign-off number)</inlineHelpText>
    <label>Total Signoffs</label>
    <summaryForeignKey>TT_Release_Signoff__c.TT_Release__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>