force-app/main/default/objects/TT_Release__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category of the release</description>
    <inlineHelpText>Category of the release</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>